# libcfg

./: CMakeLists.txt  README.md  flake.nix
examples/: example.c  example.cfg
include/: cfg.h
src/: cfg.c  cfg.h
